完善学生模块

--- a/pages/index.html
+++ b/pages/index.html
@@ -32,10 +32,20 @@
             <el-header class="main-header" style="height:70px;">
                 <nav class="navbar">
                     <a class="logo" href="#" style="text-align:center">
-                        <span class="logo-lg" style="font-size: large; font-style: italic;"><i
-                                class="el-icon-loading"></i> 欢迎您！{{user.role}}用户 :
+                        <span class="logo-lg" style="font-size: large; font-style: italic; background: linear-gradient(to right, red, blue);
+                        -webkit-background-clip: text;
+                        color: transparent;">欢迎您！{{user.role}}用户 :
                             <span v-if="user.role != '管理员'"> {{user.realName}}</span>
                             <span v-if="user.role == '管理员'"> {{user.username}}</span>
+                        </span>
+                        <span style="
+                        position: relative;
+                        left: 887px;
+                        color: cornsilk;
+                        font-family: math;
+                        font-size: medium;
+                        top: 2px;">
+                            当前时间：{{time}}
                         </span>
                     </a>
                     <div class="right-menu">
@@ -55,7 +65,7 @@
                                 </el-dropdown-item>
                                 <el-dropdown-item divided>
                                     <span style="display:block;">
-                                        <span style="color: black" @click="logout">退出</span>
+                                        <span @click="logout" style="color: black">退出</span>
                                     </span>
                                 </el-dropdown-item>
                             </el-dropdown-menu>
@@ -234,85 +244,13 @@
         let vm = new Vue({
             el: '#app',
             data: {
+                time: null,
                 dialogFormVisible4EditStudent: false, //编辑表单是否可见
                 dialogFormVisible4EditTeacher: false,
                 dialogFormVisible4EditPassword: false, //编辑密码表单是否可见
                 //当前用户信息
                 user: {},
-                menuList: [
-                    /*   {
-                           "path": "0",
-                           "title": "系统管理",
-                           "icon": "el-icon-setting",
-                           "children": [
-                               {
-                                   "path": "/0-1",
-                                   "title": "学生管理",
-                                   "icon": "el-icon-user-solid",
-                                   "linkUrl": "./admin/student-crud.html",
-                                   "children": []
-                               },
-                               {
-                                   "path": "/0-2",
-                                   "title": "教师管理",
-                                   "icon": "el-icon-user",
-                                   "linkUrl": "./admin/teacher-crud.html",
-                                   "children": []
-                               },
-       
-                           ]
-                       },
-                       {
-                           "path": "1",
-                           "title": "学生毕设管理",
-                           "icon": "fa-user-md",
-                           "children": [
-                               {
-                                   "path": "/1-1",
-                                   "title": "选择毕设",
-                                   "icon": "el-icon-s-unfold",
-                                   "linkUrl": "./student/graduation-list.html",
-                                   "children": []
-                               },
-                               {
-                                   "path": "/1-2",
-                                   "title": "查看毕设",
-                                   "icon": "el-icon-view",
-                                   "linkUrl": "./student/graduation-info.html",
-                                   "children": []
-                               },
-                               /!*           {
-                                              "path": "/1-3",
-                                              "title": "个人信息",
-                                              "icon": "el-icon-s-check",
-                                              "linkUrl": "./student/student-info.html",
-                                              "children": []
-                                          },*!/
-       
-                           ]
-                       },
-                       {
-                           "path": "2",
-                           "title": "老师毕设管理",
-                           "icon": "el-icon-s-custom",
-                           "children": [
-                               {
-                                   "path": "/2-1",
-                                   "title": "添加毕业设计",
-                                   "icon": "el-icon-document-add",
-                                   "linkUrl": "add-graduation.html",
-                                   "children": []
-                               },
-                               {
-                                   "path": "/2-2",
-                                   "title": "查看已选毕设",
-                                   "icon": "el-icon-document-copy",
-                                   "linkUrl": "graduation-detail.html",
-                                   "children": []
-                               },
-                           ]
-                       },*/
-                ],
+                menuList: [],
                 formData: {}, //表单数据
                 rules: {
                     //校验规则
@@ -322,7 +260,12 @@
                 },
             },
             created() {
-                const username = sessionStorage.getItem("username")
+                let username = null;
+                try {
+                    username = sessionStorage.getItem("username");
+                } catch (error) {
+                    window.location.href = "../login.html";
+                }
                 //发送ajax请求，请求Controller获取当前登录用户的用户名，展示到页面中
                 axios.get("http://106.15.249.199:8083/topicsystem/info?username=" + username).then((response) => {
                     if (response.data.code === 200) {
@@ -330,7 +273,13 @@
                             message: "登录成功",
                             type: "success",
                         });
-                        this.user = response.data.data[username];
+                        try {
+                            this.user = response.data.data[username];
+                        } catch (error) {
+                      /*       window.location.href = "../login.html";
+                            this.$message.error("登录失败"); */
+                        }
+
                         this.user.role = response.data.data.role;
                         console.log(this.user.role);
                         if (this.user.role == "admin") {
@@ -424,9 +373,35 @@
 
                 window.passUserInfo = () => {
                     return this.user;
-                }
+                };
+                setInterval(this.getTime, 500);
             },
             methods: {
+                getTime() {
+                    this.time = this.dateFormat("YYYY-mm-dd HH:MM:SS", new Date());
+
+                },
+                dateFormat(fmt, date) {
+                    let ret;
+                    const opt = {
+                        "Y+": date.getFullYear().toString(),        // 年
+                        "m+": (date.getMonth() + 1).toString(),     // 月
+                        "d+": date.getDate().toString(),            // 日
+                        "H+": date.getHours().toString(),           // 时
+                        "M+": date.getMinutes().toString(),         // 分
+                        "S+": date.getSeconds().toString()          // 秒
+                        // 有其他格式化字符需求可以继续添加，必须转化成字符串
+                    };
+                    for (let k in opt) {
+                        ret = new RegExp("(" + k + ")").exec(fmt);
+                        if (ret) {
+                            fmt = fmt.replace(ret[1], (ret[1].length == 1) ? (opt[k]) : (opt[k].padStart(ret[1].length, "0")))
+                        }
+                        ;
+                    }
+                    ;
+                    return fmt;
+                },
                 logout() {
                     axios.get("http://106.15.249.199:8083/topicsystem/logout").then((response) => {
                         if (response.data.code === 200) {
@@ -538,7 +513,6 @@
                         }
                     });
                 },
-
             }
 
         });
