--- a/pages/student/graduation-info.html
+++ b/pages/student/graduation-info.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <!-- 页面meta -->
     <meta charset="utf-8">
@@ -30,7 +31,8 @@
             flex: 1 1 0%;
         }
 
-        .datatable td, .datatable th {
+        .datatable td,
+        .datatable th {
             padding: 12px 0;
             min-width: 0;
             -webkit-box-sizing: border-box;
@@ -42,6 +44,7 @@
         }
     </style>
 </head>
+
 <body class="hold-transition">
 <div id="app">
     <div class="content-header">
@@ -54,56 +57,54 @@
     </div>
     <div class="app-container">
         <div class="box">
-            <!--模糊查询组件以及新建按钮-->
-            <div class="filter-container">
-                <el-input @keyup.enter.native="handleFilter" class="filter-item" placeholder="选题名称"
-                          style="width: 200px;"
-                          v-model="pagination.queryString"></el-input>
-                <el-button @click="findPage()" class="dalfBut">查询</el-button>
-            </div>
-            <!--展示学生详情信息表单-->
-            <el-table :data="dataList" current-row-key="id" highlight-current-row size="small" stripe>
-                <el-table-column align="center" label="序号" type="index"></el-table-column>
-                <el-table-column align="center" label="选题名称" prop="title"></el-table-column>
-                <el-table-column align="center" label="描述信息" prop="description"></el-table-column>
-                <!--                <el-table-column align="center" label="老师信息" prop="age"></el-table-column>-->
-                <el-table-column
-                        label="老师"
-                        align="center"
-                >
-                    <template slot-scope="scope">
-                        <el-popover trigger="hover" placement="top">
-                            <p>性别: {{ scope.row.gender }}</p>
-                            <p>年龄: {{ scope.row.age }}</p>
-                            <p>学位: {{ scope.row.degree }}</p>
-                            <div slot="reference" class="name-wrapper">
-                                <el-tag size="medium">{{ scope.row.realName }}</el-tag>
-                            </div>
-                        </el-popover>
-                    </template>
-                </el-table-column>
-                <el-table-column align="center" label="操作：最多可选两个">
-                    <template slot-scope="scope">
-                        <el-button @click="handleAdd(scope.row)" id="c_btn" size="mini" type="primary" :disabled="btn_status">
-                            选择
-                        </el-button>
-                    </template>
-                </el-table-column>
-            </el-table>
-            <div class="pagination-container">
-                <el-pagination
-                        :current-page="pagination.currentPage"
-                        :page-size="pagination.pageSize"
-                        :total="pagination.total"
-                        @current-change="handleCurrentChange"
-                        class="pagiantion"
-                        layout="total, prev, pager, next, jumper">
-                </el-pagination>
+            <div class="box">
+                <!--模糊查询组件以及新建按钮-->
+                <div class="filter-container">
+                    <el-input @keyup.enter.native="handleFilter" class="filter-item" placeholder="选题名称"
+                              style="width: 200px;" v-model="pagination.queryString"></el-input>
+                    <el-button @click="findPage()" class="dalfBut">查询</el-button>
+                </div>
+                <!--展示学生详情信息表单-->
+                <el-table :data="dataList" current-row-key="id" highlight-current-row size="small" stripe>
+                    <el-table-column align="center" label="序号" type="index"></el-table-column>
+                    <el-table-column align="center" label="选题名称" prop="title"></el-table-column>
+                    <el-table-column align="center" label="描述信息" prop="description"></el-table-column>
+                    <el-table-column align="center" label="状态">
+                        <template slot-scope="scope">
+                            <el-popover placement="top" trigger="hover">
+                                <p v-if="scope.row.status=='审核中'">申请时间: {{ scope.row.admitTime }}</p>
+                                <p v-if="scope.row.status=='已取消'">取消时间: {{ scope.row.admitTime }}</p>
+                                <p v-if="scope.row.status=='已拒绝'">拒绝时间: {{ scope.row.admitTime }}</p>
+                                <p v-if="scope.row.status=='已通过'">取消时间: {{ scope.row.admitTime }}</p>
+                                <div class="name-wrapper" slot="reference">
+                                    <el-tag size="medium">{{ scope.row.status }}</el-tag>
+                                </div>
+                            </el-popover>
+                        </template>
+                    </el-table-column>
+                    <el-table-column align="center" label="操作：已通过的选题无法退选">
+                        <template slot-scope="scope">
+                            <el-button @click="handleUpdate(scope.row)" size="mini" type="primary"
+                                       v-if="scope.row.status=='审核中'">
+                                退选
+                            </el-button>
+                            <el-button : @click="handleUpdate(scope.row)" size="mini" type="primary"
+                                       v-if="scope.row.status=='已取消'">
+                                重新申请
+                            </el-button>
+                        </template>
+                    </el-table-column>
+                </el-table>
+                <div class="pagination-container">
+                    <el-pagination :current-page="pagination.currentPage" :page-size="pagination.pageSize"
+                                   :total="pagination.total" @current-change="handleCurrentChange" class="pagiantion"
+                                   layout="total, prev, pager, next, jumper">
+                    </el-pagination>
+                </div>
             </div>
         </div>
     </div>
 </div>
-</body>
 <!-- 引入组件库 -->
 <script src="../../js/vue.js"></script>
 <script src="../../plugins/elementui/index.js"></script>
@@ -113,7 +114,6 @@
     const vm = new Vue({
         el: "#app",
         data: {
-            btn_status: false,
             pagination: {
                 //分页相关模型数据
                 currentPage: 1, //当前页码
@@ -137,15 +137,6 @@
         methods: {
             //分页查询
             findPage() {
-                /*//需要交给后台的当前页信息
-                const pageInfo = {
-                    //当前页码
-                    pageNum: this.pagination.currentPage,
-                    //每页数据数量大小
-                    pageSize: this.pagination.pageSize,
-                    //查询的条件
-                    name: this.pagination.queryString,
-                };*/
                 const formData = {
                     "studentId": window.parent.passUserInfo().id,
                 };
@@ -155,148 +146,84 @@
                     .then((response) => {
                         //从后台响应回的数据中获取用于展示的数据列表
                         this.dataList = response.data.data;
+                        this.pagination.total = this.dataList.length;
                     });
             },
-            //添加
-            handleAdd(row) {
-                this.$confirm("是否确认选择该题目?", "提示", {
+            // 弹出编辑窗口
+            handleUpdate(row) {
+                const cancelMessage = "是否确认退选?该操作不可逆";
+                const replyMessage = "是否重新申请该选题?";
+                let confirmMessage = null;
+                let updateData = {
+                    "essayId": row.essayId,
+                    "studentId": row.studentId
+                }
+                if (row.status == "已取消") {
+                    confirmMessage = replyMessage;
+                    updateData.status = 0;
+                }
+                if (row.status == "审核中") {
+                    confirmMessage = cancelMessage;
+                    updateData.status = 3;
+                }
+                this.$confirm(confirmMessage, "提示", {
                     confirmButtonText: "确定",
                     cancelButtonText: "取消",
                     type: "warning",
                 })
                     .then(() => {
-                        const formData = {
-                            "essayId": row.id,
-                            "studentId": window.parent.passUserInfo().id,
-                        };
-                        axios
-                            .post("http://106.15.249.199:8083/topicsystem/student/reply", formData)
-                            .then((response) => {
-                                if (response.data.code === 200) {
-                                    this.$message({
-                                        message: response.data.message,
-                                        type: "success",
-                                    });
-                                } else {
-                                    this.$message.error(response.data.message);
-                                    this.btn_status = true;
-                                }
-                            })
-                            .finally(() => {
+                        let count = 0;
+                        for (let index = 0; index < this.dataList.length; index++) {
+                            const element = this.dataList[index];
+                            if (element.status == "审核中") {
+                                count++;
+                            }
+                        }
+                        if (count < 2 || row.status == "审核中") {
+                            //发送ajax请求回写数据
+                            axios
+                                .put("http://106.15.249.199:8083/topicsystem/student/reply/update", updateData)
+                                .then((response) => {
+                                    //判断请求是否处理成功
+                                    if (response.data.code === 200) {
+                                        //请求处理成功
+                                        this.$message({
+                                            type: "success",
+                                            message: response.data.message,
+                                        });
+                                    } else {
+                                        //请求处理失败，提示错误信息
+                                        this.$message.error(response.data.message);
+                                    }
+                                }).finally(() => {
                                 this.findPage();
                             });
+                        } else {
+                            this.$message({
+                                type: "info",
+                                message: "最多只能存在两个审核中的选题",
+                            });
+                        }
+
                     })
                     .catch(() => {
                         this.$message({
                             type: "info",
-                            message: "已取消选择",
+                            message: "操作已取消",
                         });
                     });
             },
 
-            //编辑
-            handleEdit() {
-                //用户点击确定提交表单后执行
-                //校验表单数据是否合法
-                this.$refs["dataEditForm"].validate((valid) => {
-                    if (valid) {
-                        axios
-                            .put("http://106.15.249.199:8083/topicsystem/admin/students/update", this.formData)
-                            .then((response) => {
-                                console.log(response)
-                                console.log(response.data)
-                                if (response.data.code === 200) {
-                                    this.$message({
-                                        type: 'success',
-                                        message: this.response.data.message
-                                    });
-                                } else {
-                                    this.$message.error(this.response.data.message);
-                                }
-                            })
-                            .finally(() => {
-                                //关闭窗口
-                                this.dialogFormVisible4Edit = false;
-                                //无论更新是否成功都刷新页面
-                                this.findPage();
-                            });
-                    } else {
-                        this.$message.error("提交失败！");
-                        return;
-                    }
-                });
-            }
-            ,
-            // 删除
-            handleDelete(row) {
-                this.$confirm("此操作将永久删除该文件, 是否继续?", "提示", {
-                    confirmButtonText: "确定",
-                    cancelButtonText: "取消",
-                    type: "warning",
-                })
-                    .then(() => {
-                        axios
-                            .delete("http://106.15.249.199:8083/topicsystem/admin/students/del?id=" + row.id)
-                            .then((response) => {
-                                if (response.data.code === 200) {
-                                    this.$message({
-                                        type: "success",
-                                        message: "删除成功!",
-                                    });
-                                    this.findPage();
-                                } else {
-                                    this.$message.error(response.data.message);
-                                }
-                            });
-                    })
-                    .catch(() => {
-                        this.$message({
-                            type: "info",
-                            message: "已取消删除",
-                        });
-                    });
-            }
-            ,
-            // 重置表单
-            resetForm() {
-                this.formData = {};
-            }
-            ,
-            // 弹出添加窗口
-            handleCreate() {
-                this.dialogFormVisible = true;
-                this.resetForm();
-            }
-            ,
-            // 弹出编辑窗口
-            handleUpdate(row) {
-                //是编辑窗口可见
-                this.dialogFormVisible4Edit = true;
-                //发送ajax请求回写数据
-                axios
-                    .get("http://106.15.249.199:8083/topicsystem/admin/students/" + row.id)
-                    .then((response) => {
-                        //判断请求是否处理成功
-                        if (response.data.code === 200) {
-                            //请求处理成功
-                            this.formData = response.data.data;
-                        } else {
-                            //请求处理失败，提示错误信息
-                            this.$message.error(response.data.message);
-                        }
-                    })
-                    .finally();
-            }
-            ,
             //切换页码
             handleCurrentChange(currentPage) {
                 //为模型数据赋值（当前页面）
                 this.pagination.currentPage = currentPage;
                 this.findPage();
-            }
+            },
 
         }
     })
 </script>
+</body>
 
 </html>
